Feature/audit (#4)
* FindByFilterApplication method, Specification API

* MVC Audit (Redis + Aspect)

* Refactoring
